Added functionality to automatically update the Webpage when the gamestate changed

--- a/PokerOnline/Pages/Index.razor
+++ b/PokerOnline/Pages/Index.razor
@@ -40,6 +40,8 @@ else {
 
             _player.JoinTable(_table);
 
+			_table.TableStateChanged += (o,e) => InvokeAsync(() => StateHasChanged());
+
             if (_table.Players.Count == 3)
                 _table.StartGame();
         }
