--- a/PokerOnline/Pages/Index.razor.css
+++ b/PokerOnline/Pages/Index.razor.css
@@ -1,7 +1,8 @@
 ﻿
 /* Displays an element in the center of the webpage */
 .centered {
-    position: absolute;
+	/*background-color: #FFF;*/
+	position: absolute;
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
