--- a/PokerOnline/Components/TableComponent.razor
+++ b/PokerOnline/Components/TableComponent.razor
@@ -1,6 +1,6 @@
 ﻿@using PokerOnline.Models
 
-<div class="table content">
+<div class="table content" style="min-height: 200px;">
     <p>Highest Bet: @TableModel.CurrBetValue / Pot: @TableModel.Pot / State: @TableModel.State / Current Player: @(TableModel.CurrPlayer != null ? TableModel.CurrPlayer.Username : "")</p>
 
     @foreach (var card in TableModel.TableCards) {
