--- a/PokerOnline/wwwroot/css/site.css
+++ b/PokerOnline/wwwroot/css/site.css
@@ -52,22 +52,27 @@ div {
 
 input {
     border: 1px solid #FFFFFF;
-    border-radius: 25px;
+    border-radius: 15px;
     height: 30px;
 }
 
     input:active, input:focus {
         border: 1px solid #00FFC2;
-        border-radius: 25px;
         height: 30px;
     }
 
 button {
-    border: none;
-    border-radius: 25px;
+    border: 3px solid #45475b;
+    border-radius: 15px;
     font-weight: bold;
     height: 30px;
+	min-height: 40px;
 }
+
+	button:hover {
+		background-color: #FFF;
+        border: 3px solid #00FFC2;
+	}
 
 div.vertical {
     display: inline-block;
