Added account-creation page

--- a/PokerOnline/Pages/Index.razor.css
+++ b/PokerOnline/Pages/Index.razor.css
@@ -1,14 +1,14 @@
 ﻿
 /* Displays an element in the center of the webpage */
-.centered {
-	/*background-color: #FFF;*/
+/*.centered {
+	/*background-color: #FFF;*//*
 	position: absolute;
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
     border: 5px, solid, #ffffff;
     padding: 10px;
-}
+}*/
 
 .login {
     padding: 0px 50px 50px 50px;
