--- a/PokerOnline/_Imports.razor
+++ b/PokerOnline/_Imports.razor
@@ -9,4 +9,5 @@
 @using PokerOnline
 @using PokerOnline.Shared
 @using PokerOnline.Components
-@using PokerOnline.Models 
+@using PokerOnline.Models
+@using PokerOnline.Controllers
