Fixed vertical alignment of divs

--- a/PokerOnline/Components/CardComponent.razor
+++ b/PokerOnline/Components/CardComponent.razor
@@ -1,6 +1,6 @@
 ﻿@using PokerOnline.Models
 
-<div class="card simple_border" style="margin: 5px;">
+<div class="card simple_border" style="margin: 5px; text-align: center; padding: 0px;">
     <p>@CardModel.GetSuit, @CardModel.GetValue</p>
 </div>
 
