Centering page again, see if it works on other computer too

--- a/PokerOnline/Pages/Index.razor
+++ b/PokerOnline/Pages/Index.razor
@@ -8,7 +8,7 @@
     </div>
 }
 else {
-<div class="vertical_flex">
+<div class="vertical_flex centered">
     <div class="@(_player == _table.CurrPlayer ? "content active" : "vertical content")">
         <UserComponent PlayerModel="_player"/>
     </div>
