--- a/PokerOnline/Pages/Index.razor
+++ b/PokerOnline/Pages/Index.razor
@@ -36,7 +36,7 @@ else {
 
     private void Connect()
     {
-        if (String.Empty != _username)
+        if (!String.IsNullOrEmpty(_username))
         {
             _player = new Player(_username, 500);
             _table = Table.GetReference();
