Changed foreground color design

--- a/PokerOnline/wwwroot/css/site.css
+++ b/PokerOnline/wwwroot/css/site.css
@@ -35,7 +35,7 @@ div {
 }
 
     div.content {
-        background-color: #45475b; /* 35363f */
+        background-color: #292A37; /* 35363f */
     }
 
     div.simple_border {
